--- a/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -249,7 +249,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/TopDownBP/Blueprints/MyCharacter
@@ -1135,7 +1135,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../New Creations/Pithica/Content/TopDownBP/Maps
+UNR=../../../../New Creations/TESTGAME4633/TEST463/Content/TopDownBP/Maps
 BRUSH=../../../../New Creations/Pithica/Content/
 FBX=../../../../New Creations/Pithica/Content/
 FBXAnim=../../../../New Creations/Pithica/Content/
@@ -1991,7 +1991,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
