--- a/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -204,18 +204,19 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
-MyCharacter_C=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+MyCharacter_C=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,
+CapsuleComponent=
 K2Node_VariableGet=MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 SceneComponent=
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,
+PostProcessComponent=PostProcessComponent.PostProcessVolume.Rendering Features,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Materials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -250,16 +251,23 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyCharacter.MyCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Character/Char_PostProcess.Char_PostProcess
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/MyCharacter
-MRUItem1=/Game/TopDownBP/Blueprints/NewBlueprint
-MRUItem2=/Game/TopDownBP/Blueprints/C_Ladder
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/TopDownBP/Blueprints/M_Cursor_Decal
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem7=/Game/TopDownBP/Character/NewPlayerController
+MRUItem0=/Game/TopDownBP/Character/Char_PostProcess
+MRUItem1=/Game/TopDownBP/Blueprints/MyCharacter
+MRUItem2=/Game/TopDownBP/Materials/Occ_MPC
+MRUItem3=/Game/TopDownBP/Materials/Occ_MF
+MRUItem4=/Game/TopDownBP/Materials/Occlusion_Material
+MRUItem5=/Game/TopDownBP/Materials/NewMaterial
+MRUItem6=/Game/TopDownBP/Blueprints/NewBlueprint
+MRUItem7=/Game/TopDownBP/Blueprints/C_Ladder
+MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem9=/Game/TopDownBP/Blueprints/M_Cursor_Decal
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem12=/Game/TopDownBP/Character/NewPlayerController
 
 [DetailCategories]
 TopDownGameMode_C.Tick=True
@@ -374,15 +382,15 @@ PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
-MyCharacter_C.Character=False
+MyCharacter_C.Character=True
 MyCharacter_C.Tick=True
-MyCharacter_C.Camera=False
-MyCharacter_C.Pawn=False
-MyCharacter_C.Replication=False
-MyCharacter_C.Rendering=False
+MyCharacter_C.Camera=True
+MyCharacter_C.Pawn=True
+MyCharacter_C.Replication=True
+MyCharacter_C.Rendering=True
 MyCharacter_C.Collision=True
-MyCharacter_C.Actor=False
-MyCharacter_C.Input=False
+MyCharacter_C.Actor=True
+MyCharacter_C.Input=True
 SkeletalMeshComponent.Variable=True
 SkeletalMeshComponent.TransformCommon=True
 SkeletalMeshComponent.Sockets=True
@@ -679,7 +687,7 @@ MyCharacter_C.Tags=True
 MyCharacter_C.Activation=True
 MyCharacter_C.Cooking=True
 MyCharacter_C.Character Movement (General Settings)=True
-MyCharacter_C.Character Movement: Walking=False
+MyCharacter_C.Character Movement: Walking=True
 MyCharacter_C.Character Movement: Jumping / Falling=True
 MyCharacter_C.Character Movement (Networking)=True
 MyCharacter_C.Character Movement: Swimming=True
@@ -693,15 +701,15 @@ MyCharacter_C.RootMotion=True
 MyCharacter_C.Character Movement: NavMesh Movement=True
 MyCharacter_C.NavMovement=True
 MyCharacter_C.Velocity=True
-MyCharacter_C.PlanarMovement=False
-MyCharacter_C.MovementComponent=False
-MyCharacter_C.Shape=False
+MyCharacter_C.PlanarMovement=True
+MyCharacter_C.MovementComponent=True
+MyCharacter_C.Shape=True
 MyCharacter_C.Materials=True
-MyCharacter_C.SkeletalMesh=False
-MyCharacter_C.Optimization=False
-MyCharacter_C.MaterialParameters=False
-MyCharacter_C.HLOD=False
-MyCharacter_C.Mobile=False
+MyCharacter_C.SkeletalMesh=True
+MyCharacter_C.Optimization=True
+MyCharacter_C.MaterialParameters=True
+MyCharacter_C.HLOD=True
+MyCharacter_C.Mobile=True
 MyCharacter_C.AssetUserData=False
 K2Node_InputAxisEvent.Input=True
 K2Node_VariableGet.Events=True
@@ -712,10 +720,10 @@ CharacterMovementComponent.Collision=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
+StaticMeshActor.Physics=False
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=True
-StaticMeshActor.Rendering=True
+StaticMeshActor.Rendering=False
 StaticMeshActor.Navigation=True
 StaticMeshActor.VirtualTexture=True
 StaticMeshActor.Tags=True
@@ -1009,6 +1017,65 @@ TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
 TextRenderActor.Actor=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionCameraPositionWS.MaterialExpression=True
+MaterialExpressionSphereMask.MaterialExpressionSphereMask=True
+MaterialExpressionSphereMask.MaterialExpression=True
+MaterialExpressionTransform.MaterialExpressionTransform=True
+MaterialExpressionTransform.MaterialExpression=True
+MaterialFunction.MaterialFunction=True
+MaterialFunction.Thumbnail=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialParameterCollection.Material=True
+MaterialExpressionIf.MaterialExpressionIf=True
+MaterialExpressionIf.MaterialExpression=True
+MaterialExpressionCollectionParameter.General=True
+MaterialExpressionCollectionParameter.MaterialExpression=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionAbs.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+PostProcessComponent.Variable=True
+PostProcessComponent.TransformCommon=True
+PostProcessComponent.Sockets=True
+PostProcessComponent.PostProcessVolume=True
+PostProcessComponent.Rendering=True
+PostProcessComponent.ComponentTick=True
+PostProcessComponent.Tags=True
+PostProcessComponent.ComponentReplication=True
+PostProcessComponent.Activation=True
+PostProcessComponent.Cooking=True
+PostProcessComponent.Events=True
+MaterialExpressionSceneTexture.UMaterialExpressionSceneTexture=True
+MaterialExpressionSceneTexture.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1061,6 +1128,9 @@ CharacterMovementComponent.Character Movement: Walking=True
 /Game/TopDownBP/Blueprints/M_Cursor_Decal.M_Cursor_Decal=1
 /Game/TopDownBP/Blueprints/C_Ladder.C_Ladder=0
 /Game/TopDownBP/Blueprints/MyCharacter.MyCharacter=1
+/Game/TopDownBP/Materials/Occ_MPC.Occ_MPC=1
+/Game/TopDownBP/Materials/Occlusion_Material.Occlusion_Material=0
+/Game/TopDownBP/Materials/Occ_MF.Occ_MF=0
 
 [MaterialEditor]
 PrimType=1
@@ -1133,22 +1203,27 @@ LevelEditorPlaySettings=True
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" "
 Object=
-MyCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" "
+MyCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+ActorComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 StaticMeshSimulationComponent="\"Object.ChaosPhysics.ChaosPhysics|General\" \"Object.ChaosPhysics.ChaosPhysics|Collisions\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[0]\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
+PostProcessComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+SceneComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
+MaterialExpression=
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
