--- a/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Rendering Features,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Materials
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Character
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -252,11 +252,10 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyCharacter.MyCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Character/Char_PostProcess.Char_PostProcess
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Character/Char_PostProcess
-MRUItem1=/Game/TopDownBP/Blueprints/MyCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/MyCharacter
+MRUItem1=/Game/TopDownBP/Character/Char_PostProcess
 MRUItem2=/Game/TopDownBP/Materials/Occ_MPC
 MRUItem3=/Game/TopDownBP/Materials/Occ_MF
 MRUItem4=/Game/TopDownBP/Materials/Occlusion_Material
@@ -1210,7 +1209,7 @@ CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGrou
 PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+ActorComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 StaticMeshSimulationComponent="\"Object.ChaosPhysics.ChaosPhysics|General\" \"Object.ChaosPhysics.ChaosPhysics|Collisions\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
