--- a/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -204,16 +204,20 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
-MyCharacter_C=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,
+MyCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 CapsuleComponent=
-K2Node_VariableGet=MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableGet=MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-SceneComponent=
-PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Rendering Features,
+HUD_Health_C=
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+FireBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Spikes_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Character
+ContentBrowserTab1.SelectedPaths=/Game/Widget
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -245,28 +249,35 @@ AssetManagementBrowser.HiddenColumns=Class
 AssetManagementBrowser.HiddenColumns=Path
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyCharacter.MyCharacter
+OpenAssetsAtExit=/Game/Widget/HUD_Health.HUD_Health
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/MyCharacter
-MRUItem1=/Game/TopDownBP/Character/Char_PostProcess
-MRUItem2=/Game/TopDownBP/Materials/Occ_MPC
-MRUItem3=/Game/TopDownBP/Materials/Occ_MF
-MRUItem4=/Game/TopDownBP/Materials/Occlusion_Material
-MRUItem5=/Game/TopDownBP/Materials/NewMaterial
-MRUItem6=/Game/TopDownBP/Blueprints/NewBlueprint
-MRUItem7=/Game/TopDownBP/Blueprints/C_Ladder
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/TopDownBP/Blueprints/M_Cursor_Decal
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownController
-MRUItem12=/Game/TopDownBP/Character/NewPlayerController
+MRUItem0=/Engine/EngineFonts/Roboto
+MRUItem1=/Game/Widget/HUD_Health
+MRUItem2=/Game/TopDownBP/Blueprints/MyCharacter
+MRUItem3=/Game/TopDownBP/Character/Spells/FireBP
+MRUItem4=/Game/Obstacles/Spikes
+MRUItem5=/Game/TopDownBP/Character/Cube_fire
+MRUItem6=/Game/TopDownBP/Character/Char_PostProcess
+MRUItem7=/Game/TopDownBP/Materials/Occ_MPC
+MRUItem8=/Game/TopDownBP/Materials/Occ_MF
+MRUItem9=/Game/TopDownBP/Materials/Occlusion_Material
+MRUItem10=/Game/TopDownBP/Materials/NewMaterial
+MRUItem11=/Game/TopDownBP/Blueprints/NewBlueprint
+MRUItem12=/Game/TopDownBP/Blueprints/C_Ladder
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem14=/Game/TopDownBP/Blueprints/M_Cursor_Decal
+MRUItem15=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem17=/Game/TopDownBP/Character/NewPlayerController
 
 [DetailCategories]
 TopDownGameMode_C.Tick=True
@@ -1075,6 +1086,75 @@ MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
 MaterialExpressionLinearInterpolate.MaterialExpression=True
 MaterialExpressionClamp.MaterialExpressionClamp=True
 MaterialExpressionClamp.MaterialExpression=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TopDownExampleMap_C.Tick=True
+TopDownExampleMap_C.Replication=True
+TopDownExampleMap_C.Actor=True
+TopDownExampleMap_C.Input=True
+Spikes_C.Tick=True
+Spikes_C.Replication=True
+Spikes_C.Rendering=True
+Spikes_C.Collision=True
+Spikes_C.Actor=True
+Spikes_C.Input=True
+K2Node_VariableSet.DefaultValueCategory=True
+Spikes_C.TransformCommon=True
+Cube_fire_C.Tick=True
+Cube_fire_C.Replication=True
+Cube_fire_C.Rendering=True
+Cube_fire_C.Collision=True
+Cube_fire_C.Actor=True
+Cube_fire_C.Input=True
+FireBP_C.Tick=True
+FireBP_C.Replication=True
+FireBP_C.Rendering=True
+FireBP_C.Collision=True
+FireBP_C.Actor=True
+FireBP_C.Input=True
+FireBP_C.TransformCommon=True
+StaticMeshComponent.MaterialParameters=True
+HUD_Health_C.Appearance=True
+HUD_Health_C.Designer=True
+HUD_Health_C.Input=True
+HUD_Health_C.Interaction=True
+HUD_Health_C.Performance=True
+HUD_Health_C.Layout=True
+HUD_Health_C.Behavior=True
+HUD_Health_C.Render Transform=True
+HUD_Health_C.Accessibility=True
+HUD_Health_C.Clipping=True
+HUD_Health_C.Navigation=True
+HUD_Health_C.Localization=True
+Font.Font=True
+Font.RuntimeFont=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1130,6 +1210,10 @@ CharacterMovementComponent.Character Movement: Walking=True
 /Game/TopDownBP/Materials/Occ_MPC.Occ_MPC=1
 /Game/TopDownBP/Materials/Occlusion_Material.Occlusion_Material=0
 /Game/TopDownBP/Materials/Occ_MF.Occ_MF=0
+/Game/Widget/HUD_Health.HUD_Health=1
+/Game/TopDownBP/Character/Spells/FireBP.FireBP=1
+/Game/Obstacles/Spikes.Spikes=1
+/Engine/EngineFonts/Roboto.Roboto=0
 
 [MaterialEditor]
 PrimType=1
@@ -1202,14 +1286,14 @@ LevelEditorPlaySettings=True
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" "
 Object=
-MyCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+MyCharacter_C=
+Character=
+Pawn=
 CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
 StaticMeshSimulationComponent="\"Object.ChaosPhysics.ChaosPhysics|General\" \"Object.ChaosPhysics.ChaosPhysics|Collisions\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1220,12 +1304,22 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[0]\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 PostProcessComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
-SceneComponent="\"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+SceneComponent=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.ImageSize\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" "
+Visual="\"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" "
+Font="\"Object.Font\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/TopDownBP/Character/Spells/FireBP.FireBP;
+RecentlyPlaced=/Game/Obstacles/Spikes.Spikes;
+RecentlyPlaced=/Game/TopDownBP/Character/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MyCharacter.MyCharacter;
@@ -1257,7 +1351,7 @@ BRUSH=../../../../New Creations/Pithica/Content/
 FBX=../../../../New Creations/Pithica/Content/
 FBXAnim=../../../../New Creations/Pithica/Content/
 GenericImport=../../../../New Creations/Pithica/Content/
-GenericExport=../../../../New Creations/Pithica/Content/
+GenericExport=G:/Unreal Engine/New Creations/TESTGAME4633/TEST463/Content/TopDownBP/Character
 GenericOpen=../../../../New Creations/Pithica/Content/
 GenericSave=../../../../New Creations/Pithica/Content/
 MeshImportExport=../../../../New Creations/Pithica/Content/
@@ -2092,6 +2186,10 @@ ExternalImagePicker.TimeStamp=2024.03.18-21.13.47
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.03.18-21.13.47
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.03.18-21.13.51
+SequencerWidgets.LastCompileMethod=Unknown
+FontEditor.TimeStamp=2024.03.18-21.13.47
+FontEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2143,4 +2241,76 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
